Quick CSS fix for file name overflow

--- a/app/assets/stylesheets/oregon_digital/_files-sets.scss
+++ b/app/assets/stylesheets/oregon_digital/_files-sets.scss
@@ -4,4 +4,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+
+  .thumbnail.file_set.attributes {
+
+      text-overflow: ellipsis;
+      overflow-x: hidden;
+
+  }
 }
